--- a/src/historias/historia1.html
+++ b/src/historias/historia1.html
@@ -6,5 +6,6 @@
     </head>
 
     <body>
+        <progress-bar id="progress_bar" progress_value="20" progress_message="20% de progreso en lectura"></progress-bar>
     </body>
 </html>
