--- a/src/historias/historia2.html
+++ b/src/historias/historia2.html
@@ -6,5 +6,6 @@
     </head>
 
     <body>
+        <progress-bar id="progress_bar" progress_value="40" progress_message="40% de progreso en lectura"></progress-bar>
     </body>
 </html>
