--- a/src/historias/historia3.html
+++ b/src/historias/historia3.html
@@ -6,5 +6,6 @@
     </head>
 
     <body>
+        <progress-bar id="progress_bar" progress_value="100" progress_message="100% de progreso en lectura"></progress-bar>
     </body>
 </html>
