--- a/src/libro_detalles/libro_detalles.html
+++ b/src/libro_detalles/libro_detalles.html
@@ -6,5 +6,6 @@
     </head>
 
     <body>
+        <progress-bar id="progress_bar" progress_value="5" progress_message="5% de progreso en lectura"></progress-bar>
     </body>
 </html>
